kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: adjust-api
spec:
  selector:
    app: adjust-api
  ports:
  - name: http
    protocol: TCP
    port: 80
  type: ClusterIP
