kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1",
       "kind":"Ingress",
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/rewrite-target: /
  generation: 1
  name: <user-defined-ingress-name>
spec:
  rules:
  - host: <specify your cname (the website name)>
    http:
      paths:
      - backend:
          serviceName: <specify the service name, you can get this by running kubectl get svc>
          servicePort: <specify the port number of your application>
        path: /
status:
  loadBalancer:
    ingress:
    - {}
